opam-version: "2.0"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg"]
license: "LGPL-2.0 with OCaml linking exception"

homepage: "https://github.com/rgrinberg/humane-re"
bug-reports: "https://github.com/rgrinberg/humane-re/issues"
dev-repo: "git+https://github.com/rgrinberg/humane-re.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>="4.03.0"}
  "dune" {>= "1.11.0"}
  "re"
  "ounit" {with-test}
]

synopsis: "The human friendly interface to ocaml-re"

